--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -11314,6 +11314,11 @@
     <string name="work_policy_privacy_settings">Your work policy info</string>
     <!-- Summary for Enterprise Privacy settings, explaining what the user can expect to find under it [CHAR LIMIT=NONE]-->
     <string name="work_policy_privacy_settings_summary">Settings managed by your IT admin</string>
+     
     <string name="randomize_mac_title">Randomize MAC address</string>
     <string name="randomize_mac_summary">Assign a new random MAC address when Wi-Fi is brought up. Scanning MAC randomization is still used with this disabled.</string>
+     
+        <!-- Title of preference to disallow audio recording [CHAR LIMIT=45] -->
+    <string name="user_disallow_audio_recording">Disallow audio recording</string>
+     
 </resources>
