--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -11321,4 +11321,7 @@
         <!-- Title of preference to disallow audio recording [CHAR LIMIT=45] -->
     <string name="user_disallow_audio_recording">Disallow audio recording</string>
      
+        <!-- Title of preference to disallow installing apps [CHAR LIMIT=45] -->
+    <string name="user_disallow_install_apps">Disallow installing apps</string>
+     
 </resources>
