Expose deny_new_usb settings
(Re-)Implement #71

Seems to work; behaviour verified via getprop.
Dynamic mode sets / unsets `security.deny_new_usb` on lock/unlock as
intended, in other modes it remains enabled/disabled.

Current setting is not pre-selected when opening Settings; I currently
lack the knowledge to quickly fix that aspect.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -11352,4 +11352,6 @@
     <!-- Summary for Enterprise Privacy settings, explaining what the user can expect to find under it [CHAR LIMIT=NONE]-->
     <string name="work_policy_privacy_settings_summary">Settings managed by your IT admin</string>
 
+    <string name="deny_new_usb_title">USB accessories</string>
+    <string name="deny_new_usb_summary">Control support for USB peripherals such as input (mice, keyboards, joysticks) and storage devices.</string>
 </resources>
