--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -13626,4 +13626,6 @@
     <string name="security_settings_fingerprint_settings_use_fingerprint_unlock_phone_summary">Allow fingerprints to unlock the screen lock. If this is disabled, fingerprints can still be used in apps.</string>
     <string name="connectivity_check_title">Internet connectivity check</string>
     <string name="connectivity_check_summary">HTTP endpoints to use for performing internet connectivity checks.</string>
+    <string name="tcp_random_isns_title">Enable random TCP ISNs</string>
+    <string name="tcp_random_isns_summary">Randomises TCP ISNs (Initial Sequence Numbers) which prevents the exposure of device clock skew over time.</string>
 </resources>
