--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -13671,6 +13671,8 @@
     <string name="security_settings_fingerprint_settings_use_fingerprint_unlock_phone_summary">Allow fingerprints to unlock the screen lock. If this is disabled, fingerprints can still be used in apps.</string>
     <string name="connectivity_check_title">Internet connectivity check</string>
     <string name="connectivity_check_summary">HTTP endpoints to use for performing internet connectivity checks.</string>
+    <string name="tcp_timestamp_disable_title">Disable TCP timestamps</string>
+    <string name="tcp_timestamp_disable_summary">Disables TCP timestamps which can make it far harder to identify device uptime at the cost of potential reliability issues on high speed connections (e.g. 5G and LTE-A networks)</string>
 
     <string name="sandboxed_google_play">Sandboxed Google Play</string>
 </resources>
